Actualizar mapeo de clases utilizando ModelMapper