@@ -6,6 +6,8 @@ import com.digitalspace.api_clientes.repository.ClienteRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 public class ClienteServiceImpl implements ClienteService {
@@ -14,21 +16,30 @@ public class ClienteServiceImpl implements ClienteService {
 
     private final ClienteRepository clienteRepository;
 
-    public ClienteServiceImpl(ClienteRepository clienteRepository) {
+    private final Function<ClienteEntity, ClienteDatosDto> entityToClienteDatosDto;
+
+    private final Function<ClienteDatosDto, ClienteEntity> dtoToClienteEntity;
+
+    public ClienteServiceImpl(ClienteRepository clienteRepository,
+                              Function<ClienteEntity, ClienteDatosDto> entityToClienteDatosDto,
+                                Function<ClienteDatosDto, ClienteEntity> dtoToClienteEntity) {
+
         this.clienteRepository = clienteRepository;
+        this.entityToClienteDatosDto = entityToClienteDatosDto;
+        this.dtoToClienteEntity = dtoToClienteEntity;
     }
 
     @Override
     public List<ClienteDatosDto> listarClientes(){
 
         List<ClienteEntity> clientes = clienteRepository.findAll();
-        return clientes.stream().map(ClienteDatosDto::new).toList();
+        return clientes.stream().map(entityToClienteDatosDto).collect(Collectors.toList());
     }
 
     @Override
     public ClienteDatosDto getClienteById(String id) {
         ClienteEntity cliente = clienteRepository.findById(id).orElseThrow();
-        return new ClienteDatosDto(cliente);
+        return entityToClienteDatosDto.apply(cliente);
 
     }
 }
